ts app might be bs???

--- a/Client/Screens/poker/styles.css
+++ b/Client/Screens/poker/styles.css
@@ -161,6 +161,8 @@ body {
   border-radius: 20px;
 }
 
+/*random mic check
+
 /* Player action status */
 .player-actions {
   margin-top: 120px; /* Increased from 30px to allow space for the player */
