--- a/Client/Screens/poker/styles.css
+++ b/Client/Screens/poker/styles.css
@@ -58,7 +58,7 @@ body {
   padding: 13px 24px;
   border-radius: 15px;
   display: flex;
-  align-items: center;
+  margin-bottom: 263px;
   gap: 6px;
 }
 
