--- a/Client/Screens/poker/styles.css
+++ b/Client/Screens/poker/styles.css
@@ -817,15 +817,15 @@ body {
   animation: flipCard 0.6s ease forwards;
 }
 
-.user.me .card .number {
-  font-size: 18px;
-  font-weight: bold;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+.table .user.me .card {
+  color: black;
 }
 
-.user.me:hover .card .number {
+.table .user.me .card .number {
+  font-size: 18px;
+  font-weight: bold;
   opacity: 1;
+  color: black;
 }
 
 /* Apply animation to players joining */
